--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
       "128": "icons/icon-128.png"
     }
   },
+  "permissions": ["tabs"],
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
