--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,11 @@
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://letterboxd.com/*/watchlist/*"],
+      "js": ["content.js"]
+    }
+  ]
 }
